compiler/testData/diagnostics/tests/dynamicTypes/unsupported.kt
// FIR_IDENTICAL
konst foo: <!UNSUPPORTED!>dynamic<!> = 1

fun foo() {
    class C {
        konst foo: <!UNSUPPORTED!>dynamic<!> = 1
    }
}
